Fix text going off-screen on retard rezs

--- a/static/style.css
+++ b/static/style.css
@@ -134,7 +134,7 @@ a:hover {
   user-select:none
 }
 
-@media only screen and (max-width: 60em) {
+@media only screen and (max-width: 100em) {
 	.left {
 		display: block;
 		margin-right: 0;
